--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,5 +1,5 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+{% extends 'base.html' %}
+{% block content %}
 <div class="container my-3">
     <table class="table">
         <thead>
@@ -28,16 +28,5 @@
         </tbody>
     </table>
 </div>
+{% endblock %}
 
-<!--
-{% if question_list %}
-    <ul>
-    {% for question in question_list %}
-    <li><a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a></li>
-
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>질문이 없습니다.</p>
-{% endif %}
--->
